--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-player": "^2.12.0"
+    "react-player": "^2.12.0",
+    "screenfull": "^6.0.2"
   },
   "devDependencies": {
     "prettier": "^2.8.8"
