--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-source-filesystem": "^5.11.0",
     "gatsby-transformer-sharp": "^5.11.0",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-player": "^2.12.0",
     "screenfull": "^6.0.2"
